# DeepFakeCam

./: .gitignore  CMakeLists.txt  README.md  download_models.sh  install_dlib_and_model.sh  plans.MD
include/: deepfake_model.h  mainwindow.h  targetfacemanager.h  virtualwebcam.h  webcammanager.h
src/: deepfake_model.cpp  facepreviewdialog.cpp  facepreviewdialog.h  main.cpp  mainwindow.cpp  targetfacemanager.cpp  test_deepfake.cpp  virtualwebcam.cpp  webcammanager.cpp
ui/: mainwindow.ui
